[package]
name = "polars-playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = { git = "https://github.com/phsym/prettytable-rs", branch = "master"}
wasm-bindgen = "0.2.34"
wee_alloc = { version = "0.4.5"}
geozero = {version = "0.7.4", features=["with-wkb"]} 
arrow2 = {version = "0.6.1", features =["io_parquet","io_parquet_compression"]} 
serde = "1.0.130"
serde_json = "1.0.68"
geo-types = "0.7.2"
wkb = "0.7.1"

[dependencies.polars]
version = "^0.16.0"
default-features = false
features = [
    "strings",
    "temporal",
    "performant",
    "pretty_fmt",
    "parquet"
]


